--- a/src/cxx/cmakelists.txt
+++ b/src/cxx/cmakelists.txt
@@ -1,8 +1,15 @@
-find_package(SQLite3)
+set (OPENSSL_USE_STATIC_LIBS TRUE)
+
+find_package(SQLite3 REQUIRED)
+find_package(OpenSSL REQUIRED)
 
 add_executable(server server.cpp)
 target_sources(server
     PRIVATE storage.cpp
     PRIVATE wordle.cpp
 )
-target_link_libraries(server PRIVATE SQLite::SQLite3)
+target_link_libraries(server 
+    PRIVATE SQLite::SQLite3
+    PRIVATE OpenSSL::Crypto
+    PRIVATE OpenSSL::SSL
+)
